==Latest==
* Fixed add device to AddressDecoder after init
* Implemented select settings with values and labels
* Implemented Apple Disk II Interface Card
* Fixed auto-open canvas when adding a canvas device
* Refactorized AppleIIVideo memory retrieval
* Implemented AppleIIAddressDecoder
* Designed the Apple II memory and video interfaces
* Reimplemented AddressMux as AddressMapper
* Integrated MMU into AddressDecoder
* Added AudioInterface and MemoryInterface helper functions
* Refactorized Apple1ACI, AppleIIAudioIn, AppleIIAudioOut
* Implemented Apple-1 and Apple II volume controls
* Implemented auto-open canvas when adding a canvas device
* Fixed dragging of audio files to a canvas
* Implemented Apple II j-plus AN2 to video
* Fixed audio recorder lock
* Fixed Apple-1 strange noises when loading files
* Fixed video renderer and floating bus sync
* Improved component framework error messages
* Fixed video flicker when changing NTSC/PAL in mixed mode
* Implemented Apple II j-plus
* Implemented Apple II plus
* Refactorized and fixed ControlBus, scheduleTimer(), invalidateTimers(), setCPUClockMultiplier()
* Fixed AppleIIVideo screen blanking when power is turned off

==OpenEmulator 1.0.2 23/12/2011==
* Connected AppleIIVideoSync
* Implemented AppleIIVideo left border hires bit 7
* Fixed horizontal and vertical counts
* Fixed AppleIIVideo lastSegment bug
* Fixed ControlBus scheduler bug
* Optimized AppleIIVideo
* Fixed ControlBus, so overdone cycles are notified
* Fixed JoystickMapper transformations
* Implemented Apple II shift key mod
* Added keyboard modifiers to the canvas interface
* Implemented Apple II CTRL+BACKSPACE and CTRL+COMMAND+BACKSPACE
* Added update() call on addDocument/removeDevice
* Fixed Apple II NTSC/PAL switching
* Fixed mouse tracking in capture mode
* Implemented JoystickMapper buttons and relative axes
* Implemented JoystickMapper
* Refactorized joystick interface
* Implemented Apple Game Controllers
* Implemented Mac OS X joystick support