@@ -26,6 +26,8 @@ bool AppleDiskII::setValue(string name, string value)
 		forceWriteProtected = (OEUInt32) getUInt(value);
 	else if (name == "image")
 		diskImage = value;
+	else if (name == "mechanism")
+		mechanism = value;
 	else
 		return false;
 	
@@ -36,8 +38,10 @@ bool AppleDiskII::getValue(string name, string& value)
 {
 	if (name == "forceWriteProtected")
 		value = getString(forceWriteProtected);
-	else if (diskImage == "image")
+	else if (name == "image")
 		value = diskImage;
+	else if (name == "mechanism")
+		value = mechanism;
 	else
 		return false;
 	
@@ -64,7 +68,7 @@ bool AppleDiskII::init()
 {
 	if (!device)
 	{
-		logMessage("ref to 'device' undefined");
+		logMessage("device not connected");
 		return false;
 	}
 	
@@ -82,7 +86,6 @@ bool AppleDiskII::postMessage(OEComponent *sender, int message, void *data)
 			return true;
 			
 		case STORAGE_MOUNT:
-			if (data)
 			{
 				string *path = (string *)data;
 				diskImage = *path;
@@ -91,7 +94,6 @@ bool AppleDiskII::postMessage(OEComponent *sender, int message, void *data)
 				
 				return true;
 			}
-			break;
 			
 		case STORAGE_UNMOUNT:
 			diskImage = "";
@@ -101,27 +103,39 @@ bool AppleDiskII::postMessage(OEComponent *sender, int message, void *data)
 			return true;
 			
 		case STORAGE_GET_MOUNTPATH:
-			if (data)
 			{
 				string *path = (string *)data;
 				*path = diskImage;
 				
 				return true;
 			}
-			break;
 			
 		case STORAGE_IS_LOCKED:
 			return true;
 			
 		case STORAGE_GET_FORMATLABEL:
-			if (data)
 			{
 				string *value = (string *)data;
 				*value = "16 sectors, 35 tracks, read-only";
 				
 				return true;
 			}
-			break;
+            
+        case STORAGE_GET_SETTINGS:
+        {
+            DeviceSettings *settings = (DeviceSettings *)data;
+            
+            DeviceSetting s;
+            s.component = this;
+            s.name = "locked";
+            s.label = "Locked";
+            s.type = "checkbox";
+            s.options = "";
+            
+            settings->push_back(s);
+            
+            return true;
+        }
 	}
 	
 	return false;
