@@ -1,0 +1,15 @@
+
+/**
+ * libemulation
+ * Audio player
+ * (C) 2012 by Marc S. Ressl (mressl@umich.edu)
+ * Released under the GPL
+ *
+ * Implements an audio player
+ */
+
+#include "AudioPlayer.h"
+
+AudioPlayer::AudioPlayer()
+{
+}
