@@ -1,0 +1,17 @@
+
+/**
+ * libemulation
+ * Audio player
+ * (C) 2012 by Marc S. Ressl (mressl@umich.edu)
+ * Released under the GPL
+ *
+ * Implements an audio player
+ */
+
+#include "OEComponent.h"
+
+class AudioPlayer : public OEComponent
+{
+public:
+    AudioPlayer();
+};
