@@ -34,19 +34,7 @@ typedef enum
     
     STORAGE_GET_FORMATLABEL,
     
-    STORAGE_SET_SETTINGS,
     STORAGE_GET_SETTINGS,
 } StorageMessage;
-
-typedef struct
-{
-    string ref;
-    string name;
-    string label;
-    string type;
-    string options;
-} StorageSetting;
-
-typedef vector<StorageSetting> StorageSettings;
 
 #endif
