@@ -1,0 +1,33 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE edl PUBLIC "-//OPENEMULATOR//DTD EDL 1.0//EN" "http://www.openemulator.org/DTD/edl-1.0.dtd">
+<edl version="1.0" label="Apple Disk II" image="images/Apple/Apple Disk II.png" description="The Disk II Floppy Disk Subsystem is a 5¼-inch floppy disk drive designed for the Apple II computer.">
+    
+    <device id="appleDiskII" label="Apple Disk II" image="images/Apple/Apple Disk II.png">
+        <setting ref="appleDiskII.drive" name="forceWriteProtected" label="Force Write Protected" type="checkbox"/>
+        <setting ref="appleDiskII.drive" name="mechanism" label="Drive Sounds" type="select" options="Shugart,Alps,None"/>
+    </device>
+    <connector id="appleDiskII.connector" type="Apple Disk Drive Port"/>
+    <component id="appleDiskII.drive" class="AppleDiskII">
+        <property name="device" ref="appleDiskII"/>
+        <property name="audioPlayer" ref="appleDiskII.audioPlayer"/>
+        <property name="image" value=""/>
+        <property name="forceWriteProtected" value="0"/>
+        <property name="mechanism" value="Shugart"/>
+        <property name="mute" value="0"/>
+        <property name="soundShugartSpin" data="${resourcePath}/sounds/Apple Disk II Spin.wav"/>
+        <property name="soundShugartArm" data="${resourcePath}/sounds/Apple Disk II Arm.wav"/>
+        <property name="soundShugartStop" data="${resourcePath}/sounds/Apple Disk II Stop.wav"/>
+        <property name="soundShugartShake" data="${resourcePath}/sounds/Apple Disk II Shake.wav"/>
+        <property name="soundAlpsSpin" data="${resourcePath}/sounds/Apple Disk II Spin.wav"/>
+        <property name="soundAlpsArm" data="${resourcePath}/sounds/Apple Disk II Arm.wav"/>
+        <property name="soundAlpsStop" data="${resourcePath}/sounds/Apple Disk II Stop.wav"/>
+        <property name="soundAlpsShake" data="${resourcePath}/sounds/Apple Disk II Shake.wav"/>
+    </component>
+    <component id="appleDiskII.spinPlayer" class="AudioPlayer">
+        <property name="audio" ref="audio"/>
+    </component>
+    <component id="appleDiskII.headPlayer" class="AudioPlayer">
+        <property name="audio" ref="audio"/>
+    </component>
+    
+</edl>
